# dust-dds

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HOWTO-configure-wsl.md  README.md  configure-linux.sh  dds_rtps_architecture.uxf  high_level_architecture.uxf
bindings/python/: Cargo.toml  README.md  build.rs  dust_dds.pyi  pyproject.toml
compatibility/: CMakeLists.txt
compatibility/publisher/: main.c  main.cpp
compatibility/subscriber/: main.c  main.cpp
dds/: Cargo.toml  README.md
dds/benches/: benchmark.rs
dds/docs/: software_design.md
dds/examples/: best_effort_publisher.rs  best_effort_subscriber.rs  configuration.rs  hello_world.rs  hello_world_publisher.rs  hello_world_subscriber.rs  ping.rs  pong.rs  reliable_publisher.rs  reliable_subscriber.rs  rtps_transport_configuration.rs  tokio_runtime.rs  tracing.rs  tracing_opentelemetry.rs  tracing_opentelemtry.rs  transport_configuration.rs
dds/schema/: schema.md
dds/src/: builtin_topics.rs  communication.rs  data_reader_proxy.rs  data_writer_proxy.rs  dcps_psm.rs  dds_domain_participant_factory.rs  dds_type.rs  domain_participant.rs  domain_participant_factory.rs  domain_participant_proxy.rs  lib.rs  message_receiver.rs  publisher_proxy.rs  return_type.rs  runtime.rs  subscriber_proxy.rs  task_manager.rs  tasks.rs  topic_proxy.rs  transport.rs  types.rs  udp_transport.rs
dds/tests/: builtin_readers.rs  content_filtered_topic.rs  data_available_listeners.rs  data_reader_listener.rs  data_writer_api.rs  data_writer_listener.rs  detect_crashed_participant.rs  detect_disconnected_subscriber.rs  detect_disonnected_subscriber.rs  discovery.rs  domain_participant_api.rs  domain_participant_factory.rs  domain_participant_factory_qos.rs  domain_participant_listener.rs  dynamic_types.rs  hello_world.rs  listener_and_wait_set.rs  listeners.rs  publisher_api.rs  publisher_listener.rs  reliability_tests.rs  structure.rs  subscriber_api.rs  subscriber_listener.rs  tokio_runtime.rs  wait_sets.rs  wire_tests.rs  write_read.rs  write_read_keyed_topic.rs  write_read_samples.rs  write_read_special_types.rs  write_read_unkeyed_topic.rs  xml_dynamic_types.rs  xtypes.rs
dds_derive/: Cargo.toml  README.md
dds_derive/src/: attribute_helpers.rs  get_key.rs  lib.rs  parsed_struct.rs
dds_derive/tests/: test_dds_type_derive.rs
dds_gen/: Cargo.toml  README.md
dds_gen/src/: lib.rs  preprocessor.rs
dds_gen/tests/: annotations.idl  appendable_struct.idl  appendable_struct.rs  basic_types.idl  basic_types.rs  const_declaration.rs  const_declarations.idl  const_declarations.rs  dds_idl.rs  enums.idl  enums.rs  examples.rs  fast_dds_idl_reference.rs  i11eperf.idl  i11eperf.rs  id_attribute.idl  id_attribute.rs  id_attributes.idl  id_attributes.rs  integration_test.idl  key_and_id.idl  key_and_id.rs  module_generation.idl  module_generation.rs  modules.rs  multiple_modules.idl  multiple_modules.rs  nested_types.idl  nested_types.rs  omg_idl_reference.rs  psm_annotations.idl  structs.rs  structs_generation.idl  structs_generation.rs  template_types.idl  template_types.rs  union_types.idl  union_types.rs
dds_implementation/: Cargo.toml
dds_implementation/src/: dds_type.rs  lib.rs  transport.rs
dds_implementation/tests/: data_writer_api.rs  discovery.rs  domain_participant_api.rs  publisher_api.rs  reliable_stateful_reader_writer.rs  subscriber_api.rs
dds_rtps_implementation/: Cargo.toml
dds_rtps_implementation/src/: data_builtin_endpoints.rs  data_reader.rs  data_serialize_deserialize.rs  data_writer.rs  dds_type.rs  domain_participant.rs  lib.rs  publisher.rs  rtps_datareader.rs  rtps_datawriter.rs  rtps_domain_participant.rs  rtps_node.rs  rtps_participant.rs  rtps_participant_entities.rs  rtps_publisher.rs  rtps_subscriber.rs  rtps_topic.rs  spdp_discovered_participant_data.rs  subscriber.rs
dds_transport/: Cargo.toml
dds_transport/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ack_nack_submessage.rs  fuzz_data_frag_submessage.rs  fuzz_data_submessage.rs  fuzz_gap_submessage.rs  fuzz_heartbeat_frag_submessage.rs  fuzz_heartbeat_submessage.rs  fuzz_rtps_submessages.rs
interoperability_tests/: AbsoluteData.idl  BigData.idl  CMakeLists.txt  Cargo.toml  DisposeData.idl  HelloWorld.idl  Inheritance.idl  NestedType.idl  Optional.idl  Union.idl  build.rs  cyclone_dds_big_data_publisher.c  cyclone_dds_big_data_subscriber.c  cyclone_dds_publisher.c  cyclone_dds_subscriber.c  dust_dds_big_data_publisher.rs  dust_dds_big_data_subscriber.rs  dust_dds_dynamic_subscriber.rs  dust_dds_publisher.rs  dust_dds_publisher_big_data.rs  dust_dds_publisher_dispose.rs  dust_dds_publisher_inheritance.rs  dust_dds_publisher_nested.rs  dust_dds_publisher_optional.rs  dust_dds_publisher_union.rs  dust_dds_subscriber.rs  dust_dds_subscriber_big_data.rs  dust_dds_subscriber_dispose.rs  dust_dds_subscriber_inheritance.rs  dust_dds_subscriber_nested.rs  dust_dds_subscriber_optional.rs  dust_dds_subscriber_union.rs  dust_dds_typelookup_subscriber.rs  publisher_multi_machine.rs  subscriber_multi_machine.rs
interoperability_tests/cyclone_dds/: CMakeLists.txt  cyclone_dds_big_data_publisher.c  cyclone_dds_big_data_subscriber.c  cyclone_dds_publisher.c  cyclone_dds_publisher_big_data.c  cyclone_dds_publisher_dispose.c  cyclone_dds_publisher_inheritance.c  cyclone_dds_publisher_nested.c  cyclone_dds_publisher_optional.c  cyclone_dds_publisher_union.c  cyclone_dds_subscriber.c  cyclone_dds_subscriber_big_data.c  cyclone_dds_subscriber_dispose.c  cyclone_dds_subscriber_inheritance.c  cyclone_dds_subscriber_nested.c  cyclone_dds_subscriber_optional.c  cyclone_dds_subscriber_union.c
nostd_test_project/: Cargo.toml
omg_interoperability_executable/: Cargo.toml  build.rs  shape.idl
rtps/: Cargo.toml
rtps/src/: lib.rs  (+16 more)
rtps_psm/: Cargo.toml
rtps_transport_udp/: Cargo.toml
rtps_udp_psm/: Cargo.toml  expanded.rs
schema_generator/: Cargo.toml
serde_cdr/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
shapes_demo/: Cargo.toml  build.rs
telescope/: Cargo.toml  cargo.toml
xtypes/: Cargo.toml
xtypes_derive/: Cargo.toml  README.md
(+1878 files in other folders)
