[workspace]

members = [
    "dds",
    "dds_derive",
    "dds_gen",
    "interoperability_tests",
    "shapes_demo",
    "shapes_demo/android",
    "telescope",
    "fuzz",
    "bindings/python",
    "omg_interoperability_executable",
    "nostd_test_project",
]
default-members = [
    "dds",
    "dds_derive",
    "dds_gen",
    "bindings/python",
    "nostd_test_project",
]
resolver = "2"
