[workspace]
members = [
    "dds",
    "dds_derive",
    "dds_gen",
    "interoperability_tests",
    "shapes_demo",
    "shapes_demo/android",
    "fuzz",
    "bindings/python",
    "omg_interoperability_executable",
    "nostd_test_project",
]
default-members = [
    "dds",
    "dds_derive",
    "dds_gen",
    "bindings/python",
    "nostd_test_project",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = [
    "Joao Rebelo <jrebelo@s2e-systems.com>",
    "Stefan Kimmer <skimmer@s2e-systems.com>",
    "Pierre Martinet <pmartinet@s2e-systems.com>",
]
homepage = "https://s2e-systems.com/products/dust-dds"
repository = "https://github.com/s2e-systems/dust-dds.git"
keywords = ["dds", "rtps", "middleware", "network", "udp"]
categories = ["api-bindings", "network-programming"]
