[package]
name = "dust_dds"
version = "0.15.0"
description = "Data Distribution Service (DDS) implementation"
readme = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dust_dds_derive = { version = "0.15", path = "../dds_derive" }

md5 = { version = "0.7.0", default-features = false, optional = true } # Chose this crate over other possibilities since it doesn't have any other dependencies

socket2 = { version = "0.5", features = ["all"], optional = true }
network-interface = { version = "2.0.3", optional = true }

tracing = { version = "0.1", default-features = false, features = [
	"attributes",
], optional = true }

regex = { version = "1.11.2", default-features = false }

critical-section = { version = "1.2.0", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
criterion = { version = "0.3", features = ["html_reports"] }
tracing-subscriber = "0.3.20"
critical-section = { version = "1.2.0", default-features = false, features = [
	"std",
] }

opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.0"

[features]
default = ["dcps", "rtps", "rtps_udp_transport", "std", "type_lookup"]
dcps = ["xtypes", "transport", "dep:md5", "dep:tracing"]
rtps_udp_transport = ["rtps", "dep:socket2", "dep:network-interface"]
rtps = ["rtps_messages"]
rtps_messages = ["transport"]
transport = ["xtypes"]
xtypes = []
std = ["critical-section/std"]
# XTypes TypeLookup service for dynamic type discovery
type_lookup = ["dcps"]

[[bench]]
name = "benchmark"
harness = false
