[package]
name = "dust_dds"
version = "0.16.0"
description = "Data Distribution Service (DDS) implementation"
readme = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dust_dds_derive = { version = "0.16", path = "../dds_derive" }

md5.workspace = true

socket2 = { version = "0.5", features = ["all"], optional = true }
network-interface = { version = "2.0.3", optional = true }

tracing = { version = "0.1", default-features = false, features = [
	"attributes",
] }

regex = { version = "1.11.2", default-features = false }
roxmltree = {version = "0.21.1", default-features = false, optional = true }

critical-section = { version = "1.2.0", default-features = false }
embassy-sync = { version = "0.8.0" }

[dev-dependencies]
dust_dds = { path = ".", features = ["xtypes-xml"] }
tokio = { version = "1", features = ["rt", "macros"] }
criterion = { version = "0.3", features = ["html_reports"] }
tracing-subscriber = "0.3.20"
critical-section = { version = "1.2.0", default-features = false, features = [
	"std",
] }

opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = "0.31"
tracing-opentelemetry = "0.32.0"

[features]
default = ["rtps_udp_transport", "std"]
rtps_udp_transport = ["dep:socket2", "dep:network-interface"]
std = ["critical-section/std"]
xtypes-xml = ["dep:roxmltree"]

[[bench]]
name = "benchmark"
harness = false
