[package]
name = "dust_dds_derive"
version = "0.10.1"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
	"Pierre Martinet <pmartinet@s2e-systems.com>",
]
edition = "2021"
license = "Apache-2.0"
description = "Derive macro for `DdsType` and other traits from `dust-dds`"
readme = "README.md"
homepage = "https://s2e-systems.com/products/dust-dds"
repository = "https://github.com/s2e-systems/dust-dds"
keywords = ["dds", "rtps", "middleware", "network", "udp"]
categories = ["api-bindings", "network-programming"]

[lib]
proc-macro = true

[dependencies]

xml-rs = "0.8.19"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
