[package]
name = "dust_dds_derive"
version = "0.15.0"
description = "Derive macro for `DdsType` and other traits from `dust-dds`"
readme = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
xml-rs = "0.8.19"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
