[package]
name = "dust_dds_gen"
version = "0.14.0"
description = "OMG IDL compiler for Dust DDS"
readme = true
keywords = ["dds", "idl", "middleware"]
categories = ["compilers"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
