[package]
name = "dds-implementation"
version = "0.1.0"
authors = ["Joao Rebelo <jrebelo@s2e-systems.com>",
		   "Stefan Kimmer <skimmer@s2e-systems.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dds-api = {path="../dds_api"}
rtps-pim = {path="../rtps_pim"}
rtps-implementation = {path="../rtps_implementation"}

byteorder = "1.4.3"
cdr = "0.2.4"
derive_more = "0.99.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
mockall = {version = "0.10.2"}