[package]
name = "rust-dds-rtps-implementation"
version = "0.1.0"
authors = ["Joao Rebelo <jrebelo@s2e-systems.com>",
		   "Stefan Kimmer <skimmer@s2e-systems.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-dds-api = {path="../dds_api"}
rust-rtps-psm = {path="../rtps_psm"}
rust-rtps-pim = {path="../rtps_pim"}
serde = { version = "1.0", default-features = false, features = ["derive"] }
erased-serde = "0.3"
cdr = "0.2.4"
byteorder = "1.4.3"