[package]
name = "rust-dds-rtps-implementation"
version = "0.1.0"
authors = ["Joao Rebelo <jrebelo@s2e-systems.com>",
		   "Stefan Kimmer <skimmer@s2e-systems.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-dds-api = {path="../dds_api"}
rust-rtps-pim = {path="../rtps_pim"}
rust-rtps-udp-psm = {path="../rtps_udp_psm"}

byteorder = "1.4.3"
cdr = "0.2.4"
derive_more = "0.99.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
mockall = {version = "0.10.2"}