[package]
name = "dust_dds-fuzz"
version = "0.0.0"
description = "Dust DDS fuzzing"
readme = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.7"
dust_dds = { path = "../dds" }

[[bin]]
name = "fuzz_ack_nack_submessage"
path = "fuzz_targets/fuzz_ack_nack_submessage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_data_submessage"
path = "fuzz_targets/fuzz_data_submessage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_data_frag_submessage"
path = "fuzz_targets/fuzz_data_frag_submessage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_gap_submessage"
path = "fuzz_targets/fuzz_gap_submessage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_heartbeat_submessage"
path = "fuzz_targets/fuzz_heartbeat_submessage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_heartbeat_frag_submessage"
path = "fuzz_targets/fuzz_heartbeat_frag_submessage.rs"
test = false
doc = false
bench = false
