[package]
name = "dust_dds_interoperability"
version = "0.1.0"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
	"Pierre Martinet <pmartinet@s2e-systems.com>"
]
license = "Apache-2.0"
edition = "2021"
description = "Dust DDS interoperability tests"
homepage = "https://s2e-systems.com/products/dust-dds"
repository = "https://github.com/s2e-systems/dust-dds"
keywords = ["dds", "rtps", "middleware", "network", "udp"]
categories = ["api-bindings", "network-programming"]

[dependencies]
dust_dds = { path = "../dds" }

serde = { version = "1.0", default-features = false, features = ["derive"] }
cdr = "=0.2.4"

[build-dependencies]
dust_dds_gen = {version = "0.2" }

[[bin]]
name = "dust_dds_publisher"
path = "dust_dds_publisher.rs"

[[bin]]
name = "dust_dds_subscriber"
path = "dust_dds_subscriber.rs"

[[bin]]
name = "dust_dds_big_data_subscriber"
path = "dust_dds_big_data_subscriber.rs"

[[bin]]
name = "dust_dds_big_data_publisher"
path = "dust_dds_big_data_publisher.rs"

[[bin]]
name = "multiple_subscriber_test_subscriber"
path = "subscriber_multi_machine.rs"

[[bin]]
name = "multiple_subscriber_test_publisher"
path = "publisher_multi_machine.rs"