[package]
name = "dust_dds_interoperability"
version = "0.1.0"
description = "Dust DDS interoperability tests"
readme = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dust_dds = { path = "../dds" }

[build-dependencies]
dust_dds_gen = { path = "../dds_gen" }

[[bin]]
name = "dust_dds_publisher"
path = "dust_dds_publisher.rs"

[[bin]]
name = "dust_dds_subscriber"
path = "dust_dds_subscriber.rs"

[[bin]]
name = "dust_dds_subscriber_big_data"
path = "dust_dds_subscriber_big_data.rs"

[[bin]]
name = "dust_dds_publisher_big_data"
path = "dust_dds_publisher_big_data.rs"

[[bin]]
name = "multiple_subscriber_test_subscriber"
path = "subscriber_multi_machine.rs"

[[bin]]
name = "multiple_subscriber_test_publisher"
path = "publisher_multi_machine.rs"

[[bin]]
name = "dust_dds_subscriber_dispose"
path = "dust_dds_subscriber_dispose.rs"

[[bin]]
name = "dust_dds_publisher_dispose"
path = "dust_dds_publisher_dispose.rs"

[[bin]]
name = "dust_dds_subscriber_nested"
path = "dust_dds_subscriber_nested.rs"

[[bin]]
name = "dust_dds_publisher_nested"
path = "dust_dds_publisher_nested.rs"

[[bin]]
name = "dust_dds_subscriber_inheritance"
path = "dust_dds_subscriber_inheritance.rs"

[[bin]]
name = "dust_dds_publisher_inheritance"
path = "dust_dds_publisher_inheritance.rs"
