[package]
name = "nostd_test_project"
version = "0.1.0"
description = "Dust DDS no_std test project"
readme = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dust_dds = { path = "../dds", default-features = false, features = [
	"dcps",
	"rtps",
] }
