[package]
name = "dust_dds_shape_main_linux"
version = "0.1.0"
description = "OMG DDS_RTPS Interoperability"
readme = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dust_dds = { path = "../dds" }
clap = { version = "4.5.47", features = ["derive", "string"] }
rand = "0.8.5"
ctrlc = "3.4"

[build-dependencies]
dust_dds_gen = { path = "../dds_gen" }
