[package]
name = "rust-rtps-transport-udp"
version = "0.1.0"
authors = ["Joao Rebelo <jrebelo@s2e-systems.com>",
		   "Stefan Kimmer <skimmer@s2e-systems.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-dds-types = {path="../dds_types"}
rust-rtps = {path="../rtps"}
ipconfig = "0.2"
net2 = "0.2"
serde = { version = "1.0", features = ["derive"] }
cdr = "0.2.3"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num]
version = "0.2"
default-features = false