[package]
name = "rust-rtps-udp-psm"
version = "0.1.0"
authors = ["Joao Rebelo <jrebelo@s2e-systems.com>",
		   "Stefan Kimmer <skimmer@s2e-systems.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-rtps-pim = {path="../rtps_pim"}
serde = { version = "1.0", default-features = false, features = ["derive"] }
rust-serde-cdr = {path="../serde_cdr"}
serde_bytes = "0.11.5"
# erased-serde = "0.3"
byteorder = "1.4.3"

[dev-dependencies]
serde_json = "1.0.64"
# serde_test = "1.0"