[package]
name = "schema_generator"
version = "0.1.0"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
]
license = "Apache-2.0"
edition = "2018"
description = "Dust DDS schema generator"
homepage = "https://s2e-systems.com/products/dust-dds"
repository = "https://github.com/s2e-systems/dust-dds"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.87"
schemars = "0.8.11"


