[package]
name = "rust-serde-cdr"
version = "0.1.0"
authors = ["Joao Rebelo <jrebelo@s2e-systems.com>",
		   "Stefan Kimmer <skimmer@s2e-systems.com"]
edition = "2018"

[dependencies]
serde = {version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
byteorder = "1.4.3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html