[package]
name = "dust_dds_shapes_demo"
version = "0.1.0"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
]
license = "Apache-2.0"
edition = "2021"
description = "Dust DDS Shapes Demo"

[lib]
path = "src/lib.rs"

[dependencies]
dust_dds = { path = "../dds"}
eframe = "0.26"
egui_extras = { version = "0.26", features = ["image"] }
image = { version = "0.25", features = ["png"] }

[build-dependencies]
dust_dds_gen = { path = "../dds_gen"}
