[package]
name = "dust_dds_shapes_demo"
version = "0.1.1"
description = "Dust DDS Shapes Demo"
readme = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dust_dds = { path = "../dds" }
eframe = { version = "^0.28.1" }
egui_extras = { version = "^0.28.1", features = ["image"] }

[build-dependencies]
dust_dds_gen = { path = "../dds_gen" }
