[package]
name = "dust_dds_telescope"
version = "0.1.0"
description = "Dust DDS Telescope"
readme = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dust_dds = { path = "../dds" }
socket2 = "0.5"
network-interface = "1.1.1"
