[package]
name = "dust_dds_xtypes_derive"
version = "0.11.0"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
]
edition = "2021"
license = "Apache-2.0"
description = "Derive macros for traits from `dust-xtypes`"
readme = "README.md"
homepage = "https://s2e-systems.com/products/dust-dds"
repository = "https://github.com/s2e-systems/dust-dds"
keywords = ["dds", "rtps", "middleware", "network", "udp"]
categories = ["api-bindings", "network-programming"]

[lib]
proc-macro = true

[dependencies]

quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
