[package]
name = "dust_dds_python"
version = "0.14.0"
description = "Dust DDS Python bindings"
readme = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "dust_dds"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["py-clone"] }
dust_dds = { path = "../../dds" }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
]}

[build-dependencies]
syn = { version = "2.0.68", features = ["visit"] }
